project1/spl-spec/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier ExtDecList error
    6       | Specifier SEMI
    7       | Specifier FunDec CompSt
    8       | Specifier error

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList
   11           | VarDec ExtDecList error

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT ID LC DefList RC
   15                | STRUCT ID LC DecList error
   16                | STRUCT ID

   17 VarDec: ID
   18       | VarDec LB INT RB
   19       | VarDec LB INT error

   20 FunDec: ID LP VarList RP
   21       | ID LP VarList error
   22       | ID LP RP
   23       | ID LP error

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec VarList error
   26        | ParamDec

   27 ParamDec: Specifier VarDec

   28 CompSt: LC DefList StmtList RC
   29       | LC DefList StmtList error

   30 StmtList: %empty
   31         | Stmt StmtList

   32 Stmt: Exp SEMI
   33     | Exp error
   34     | CompSt
   35     | RETURN Exp SEMI
   36     | RETURN Exp error
   37     | IF LP Exp RP Stmt
   38     | IF LP Exp RP Stmt ELSE Stmt
   39     | WHILE LP Exp RP Stmt
   40     | WHILE LP Exp error Stmt
   41     | IF LP Exp error Stmt

   42 DefList: %empty
   43        | Def DefList

   44 Def: Specifier DecList SEMI
   45    | Specifier DecList error

   46 DecList: Dec
   47        | Dec COMMA DecList
   48        | Dec DecList error

   49 Dec: VarDec
   50    | VarDec ASSIGN Exp

   51 Exp: Exp ASSIGN Exp
   52    | Exp AND Exp
   53    | Exp OR Exp
   54    | Exp LT Exp
   55    | Exp LE Exp
   56    | Exp GT Exp
   57    | Exp GE Exp
   58    | Exp NE Exp
   59    | Exp EQ Exp
   60    | Exp PLUS Exp
   61    | Exp MINUS Exp
   62    | Exp MUL Exp
   63    | Exp DIV Exp
   64    | LP Exp RP
   65    | LP Exp error
   66    | MINUS Exp
   67    | NOT Exp
   68    | ID LP Args RP
   69    | ID LP RP
   70    | ID LP Args error
   71    | ID LP error
   72    | Exp LB Exp RB
   73    | Exp LB Exp error
   74    | Exp DOT ID
   75    | ID
   76    | INT
   77    | FLOAT
   78    | CHAR

   79 Args: Exp COMMA Args
   80     | Exp COMMA COMMA Args error
   81     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 5 8 11 15 19 21 23 25 29 33 36 40 41 45 48 65 70 71 73 80
    LOWER_ELSE <Node_value> (258)
    ELSE <Node_value> (259) 38
    TYPE <Node_value> (260) 12
    STRUCT <Node_value> (261) 14 15 16
    IF <Node_value> (262) 37 38 41
    WHILE <Node_value> (263) 39 40
    RETURN <Node_value> (264) 35 36
    INT <Node_value> (265) 18 19 76
    ID <Node_value> (266) 14 15 16 17 20 21 22 23 68 69 70 71 74 75
    FLOAT <Node_value> (267) 77
    CHAR <Node_value> (268) 78
    ASSIGN <Node_value> (269) 50 51
    OR <Node_value> (270) 53
    AND <Node_value> (271) 52
    LT <Node_value> (272) 54
    LE <Node_value> (273) 55
    GT <Node_value> (274) 56
    GE <Node_value> (275) 57
    NE <Node_value> (276) 58
    EQ <Node_value> (277) 59
    PLUS <Node_value> (278) 60
    MINUS <Node_value> (279) 61 66
    MUL <Node_value> (280) 62
    DIV <Node_value> (281) 63
    NOT <Node_value> (282) 67
    LP <Node_value> (283) 20 21 22 23 37 38 39 40 41 64 65 68 69 70 71
    RP <Node_value> (284) 20 22 37 38 39 64 68 69
    LB <Node_value> (285) 18 19 72 73
    RB <Node_value> (286) 18 72
    DOT <Node_value> (287) 74
    SEMI <Node_value> (288) 4 6 32 35 44
    COMMA <Node_value> (289) 10 24 47 79 80
    LC <Node_value> (290) 14 15 28 29
    RC <Node_value> (291) 14 28


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    Program <Node_value> (38)
        on left: 1
        on right: 0
    ExtDefList <Node_value> (39)
        on left: 2 3
        on right: 1 3
    ExtDef <Node_value> (40)
        on left: 4 5 6 7 8
        on right: 3
    ExtDecList <Node_value> (41)
        on left: 9 10 11
        on right: 4 5 10 11
    Specifier <Node_value> (42)
        on left: 12 13
        on right: 4 5 6 7 8 27 44 45
    StructSpecifier <Node_value> (43)
        on left: 14 15 16
        on right: 13
    VarDec <Node_value> (44)
        on left: 17 18 19
        on right: 9 10 11 18 19 27 49 50
    FunDec <Node_value> (45)
        on left: 20 21 22 23
        on right: 7
    VarList <Node_value> (46)
        on left: 24 25 26
        on right: 20 21 24 25
    ParamDec <Node_value> (47)
        on left: 27
        on right: 24 25 26
    CompSt <Node_value> (48)
        on left: 28 29
        on right: 7 34
    StmtList <Node_value> (49)
        on left: 30 31
        on right: 28 29 31
    Stmt <Node_value> (50)
        on left: 32 33 34 35 36 37 38 39 40 41
        on right: 31 37 38 39 40 41
    DefList <Node_value> (51)
        on left: 42 43
        on right: 14 28 29 43
    Def <Node_value> (52)
        on left: 44 45
        on right: 43
    DecList <Node_value> (53)
        on left: 46 47 48
        on right: 15 44 45 47 48
    Dec <Node_value> (54)
        on left: 49 50
        on right: 46 47 48
    Exp <Node_value> (55)
        on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78
        on right: 32 33 35 36 37 38 39 40 41 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 72 73 74 79 80 81
    Args <Node_value> (56)
        on left: 79 80 81
        on right: 68 70 79 80


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 2 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


State 2

   14 StructSpecifier: STRUCT . ID LC DefList RC
   15                | STRUCT . ID LC DecList error
   16                | STRUCT . ID

    ID  shift, and go to state 8


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 9


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    3 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 10
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . ExtDecList error
    6       | Specifier . SEMI
    7       | Specifier . FunDec CompSt
    8       | Specifier . error

    error  shift, and go to state 11
    ID     shift, and go to state 12
    SEMI   shift, and go to state 13

    ExtDecList  go to state 14
    VarDec      go to state 15
    FunDec      go to state 16


State 7

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


State 8

   14 StructSpecifier: STRUCT ID . LC DefList RC
   15                | STRUCT ID . LC DecList error
   16                | STRUCT ID .

    LC  shift, and go to state 17

    $default  reduce using rule 16 (StructSpecifier)


State 9

    0 $accept: Program $end .

    $default  accept


State 10

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 11

    8 ExtDef: Specifier error .

    $default  reduce using rule 8 (ExtDef)


State 12

   17 VarDec: ID .
   20 FunDec: ID . LP VarList RP
   21       | ID . LP VarList error
   22       | ID . LP RP
   23       | ID . LP error

    LP  shift, and go to state 18

    $default  reduce using rule 17 (VarDec)


State 13

    6 ExtDef: Specifier SEMI .

    $default  reduce using rule 6 (ExtDef)


State 14

    4 ExtDef: Specifier ExtDecList . SEMI
    5       | Specifier ExtDecList . error

    error  shift, and go to state 19
    SEMI   shift, and go to state 20


State 15

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   11           | VarDec . ExtDecList error
   18 VarDec: VarDec . LB INT RB
   19       | VarDec . LB INT error

    ID     shift, and go to state 21
    LB     shift, and go to state 22
    COMMA  shift, and go to state 23

    $default  reduce using rule 9 (ExtDecList)

    ExtDecList  go to state 24
    VarDec      go to state 15


State 16

    7 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 25

    CompSt  go to state 26


State 17

   14 StructSpecifier: STRUCT ID LC . DefList RC
   15                | STRUCT ID LC . DecList error

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    ID      shift, and go to state 21

    $default  reduce using rule 42 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    VarDec           go to state 28
    DefList          go to state 29
    Def              go to state 30
    DecList          go to state 31
    Dec              go to state 32


State 18

   20 FunDec: ID LP . VarList RP
   21       | ID LP . VarList error
   22       | ID LP . RP
   23       | ID LP . error

    error   shift, and go to state 33
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    RP      shift, and go to state 34

    Specifier        go to state 35
    StructSpecifier  go to state 7
    VarList          go to state 36
    ParamDec         go to state 37


State 19

    5 ExtDef: Specifier ExtDecList error .

    $default  reduce using rule 5 (ExtDef)


State 20

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 21

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 22

   18 VarDec: VarDec LB . INT RB
   19       | VarDec LB . INT error

    INT  shift, and go to state 38


State 23

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 21

    ExtDecList  go to state 39
    VarDec      go to state 15


State 24

   11 ExtDecList: VarDec ExtDecList . error

    error  shift, and go to state 40


State 25

   28 CompSt: LC . DefList StmtList RC
   29       | LC . DefList StmtList error

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 42 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 41
    Def              go to state 30


State 26

    7 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 7 (ExtDef)


State 27

   44 Def: Specifier . DecList SEMI
   45    | Specifier . DecList error

    ID  shift, and go to state 21

    VarDec   go to state 28
    DecList  go to state 42
    Dec      go to state 32


State 28

   18 VarDec: VarDec . LB INT RB
   19       | VarDec . LB INT error
   49 Dec: VarDec .
   50    | VarDec . ASSIGN Exp

    ASSIGN  shift, and go to state 43
    LB      shift, and go to state 22

    $default  reduce using rule 49 (Dec)


State 29

   14 StructSpecifier: STRUCT ID LC DefList . RC

    RC  shift, and go to state 44


State 30

   43 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 42 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 45
    Def              go to state 30


State 31

   15 StructSpecifier: STRUCT ID LC DecList . error

    error  shift, and go to state 46


State 32

   46 DecList: Dec .
   47        | Dec . COMMA DecList
   48        | Dec . DecList error

    ID     shift, and go to state 21
    COMMA  shift, and go to state 47

    $default  reduce using rule 46 (DecList)

    VarDec   go to state 28
    DecList  go to state 48
    Dec      go to state 32


State 33

   23 FunDec: ID LP error .

    $default  reduce using rule 23 (FunDec)


State 34

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


State 35

   27 ParamDec: Specifier . VarDec

    ID  shift, and go to state 21

    VarDec  go to state 49


State 36

   20 FunDec: ID LP VarList . RP
   21       | ID LP VarList . error

    error  shift, and go to state 50
    RP     shift, and go to state 51


State 37

   24 VarList: ParamDec . COMMA VarList
   25        | ParamDec . VarList error
   26        | ParamDec .

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    COMMA   shift, and go to state 52

    $default  reduce using rule 26 (VarList)

    Specifier        go to state 35
    StructSpecifier  go to state 7
    VarList          go to state 53
    ParamDec         go to state 37


State 38

   18 VarDec: VarDec LB INT . RB
   19       | VarDec LB INT . error

    error  shift, and go to state 54
    RB     shift, and go to state 55


State 39

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 40

   11 ExtDecList: VarDec ExtDecList error .

    $default  reduce using rule 11 (ExtDecList)


State 41

   28 CompSt: LC DefList . StmtList RC
   29       | LC DefList . StmtList error

    IF      shift, and go to state 56
    WHILE   shift, and go to state 57
    RETURN  shift, and go to state 58
    INT     shift, and go to state 59
    ID      shift, and go to state 60
    FLOAT   shift, and go to state 61
    CHAR    shift, and go to state 62
    MINUS   shift, and go to state 63
    NOT     shift, and go to state 64
    LP      shift, and go to state 65
    LC      shift, and go to state 25

    $default  reduce using rule 30 (StmtList)

    CompSt    go to state 66
    StmtList  go to state 67
    Stmt      go to state 68
    Exp       go to state 69


State 42

   44 Def: Specifier DecList . SEMI
   45    | Specifier DecList . error

    error  shift, and go to state 70
    SEMI   shift, and go to state 71


State 43

   50 Dec: VarDec ASSIGN . Exp

    INT    shift, and go to state 59
    ID     shift, and go to state 60
    FLOAT  shift, and go to state 61
    CHAR   shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 72


State 44

   14 StructSpecifier: STRUCT ID LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 45

   43 DefList: Def DefList .

    $default  reduce using rule 43 (DefList)


State 46

   15 StructSpecifier: STRUCT ID LC DecList error .

    $default  reduce using rule 15 (StructSpecifier)


State 47

   47 DecList: Dec COMMA . DecList

    ID  shift, and go to state 21

    VarDec   go to state 28
    DecList  go to state 73
    Dec      go to state 32


State 48

   48 DecList: Dec DecList . error

    error  shift, and go to state 74


State 49

   18 VarDec: VarDec . LB INT RB
   19       | VarDec . LB INT error
   27 ParamDec: Specifier VarDec .

    LB  shift, and go to state 22

    $default  reduce using rule 27 (ParamDec)


State 50

   21 FunDec: ID LP VarList error .

    $default  reduce using rule 21 (FunDec)


State 51

   20 FunDec: ID LP VarList RP .

    $default  reduce using rule 20 (FunDec)


State 52

   24 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 35
    StructSpecifier  go to state 7
    VarList          go to state 75
    ParamDec         go to state 37


State 53

   25 VarList: ParamDec VarList . error

    error  shift, and go to state 76


State 54

   19 VarDec: VarDec LB INT error .

    $default  reduce using rule 19 (VarDec)


State 55

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 56

   37 Stmt: IF . LP Exp RP Stmt
   38     | IF . LP Exp RP Stmt ELSE Stmt
   41     | IF . LP Exp error Stmt

    LP  shift, and go to state 77


State 57

   39 Stmt: WHILE . LP Exp RP Stmt
   40     | WHILE . LP Exp error Stmt

    LP  shift, and go to state 78


State 58

   35 Stmt: RETURN . Exp SEMI
   36     | RETURN . Exp error

    INT    shift, and go to state 59
    ID     shift, and go to state 60
    FLOAT  shift, and go to state 61
    CHAR   shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 79


State 59

   76 Exp: INT .

    $default  reduce using rule 76 (Exp)


State 60

   68 Exp: ID . LP Args RP
   69    | ID . LP RP
   70    | ID . LP Args error
   71    | ID . LP error
   75    | ID .

    LP  shift, and go to state 80

    $default  reduce using rule 75 (Exp)


State 61

   77 Exp: FLOAT .

    $default  reduce using rule 77 (Exp)


State 62

   78 Exp: CHAR .

    $default  reduce using rule 78 (Exp)


State 63

   66 Exp: MINUS . Exp

    INT    shift, and go to state 59
    ID     shift, and go to state 60
    FLOAT  shift, and go to state 61
    CHAR   shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 81


State 64

   67 Exp: NOT . Exp

    INT    shift, and go to state 59
    ID     shift, and go to state 60
    FLOAT  shift, and go to state 61
    CHAR   shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 82


State 65

   64 Exp: LP . Exp RP
   65    | LP . Exp error

    INT    shift, and go to state 59
    ID     shift, and go to state 60
    FLOAT  shift, and go to state 61
    CHAR   shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 83


State 66

   34 Stmt: CompSt .

    $default  reduce using rule 34 (Stmt)


State 67

   28 CompSt: LC DefList StmtList . RC
   29       | LC DefList StmtList . error

    error  shift, and go to state 84
    RC     shift, and go to state 85


State 68

   31 StmtList: Stmt . StmtList

    IF      shift, and go to state 56
    WHILE   shift, and go to state 57
    RETURN  shift, and go to state 58
    INT     shift, and go to state 59
    ID      shift, and go to state 60
    FLOAT   shift, and go to state 61
    CHAR    shift, and go to state 62
    MINUS   shift, and go to state 63
    NOT     shift, and go to state 64
    LP      shift, and go to state 65
    LC      shift, and go to state 25

    $default  reduce using rule 30 (StmtList)

    CompSt    go to state 66
    StmtList  go to state 86
    Stmt      go to state 68
    Exp       go to state 69


State 69

   32 Stmt: Exp . SEMI
   33     | Exp . error
   51 Exp: Exp . ASSIGN Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . LT Exp
   55    | Exp . LE Exp
   56    | Exp . GT Exp
   57    | Exp . GE Exp
   58    | Exp . NE Exp
   59    | Exp . EQ Exp
   60    | Exp . PLUS Exp
   61    | Exp . MINUS Exp
   62    | Exp . MUL Exp
   63    | Exp . DIV Exp
   72    | Exp . LB Exp RB
   73    | Exp . LB Exp error
   74    | Exp . DOT ID

    error   shift, and go to state 87
    ASSIGN  shift, and go to state 88
    OR      shift, and go to state 89
    AND     shift, and go to state 90
    LT      shift, and go to state 91
    LE      shift, and go to state 92
    GT      shift, and go to state 93
    GE      shift, and go to state 94
    NE      shift, and go to state 95
    EQ      shift, and go to state 96
    PLUS    shift, and go to state 97
    MINUS   shift, and go to state 98
    MUL     shift, and go to state 99
    DIV     shift, and go to state 100
    LB      shift, and go to state 101
    DOT     shift, and go to state 102
    SEMI    shift, and go to state 103


State 70

   45 Def: Specifier DecList error .

    $default  reduce using rule 45 (Def)


State 71

   44 Def: Specifier DecList SEMI .

    $default  reduce using rule 44 (Def)


State 72

   50 Dec: VarDec ASSIGN Exp .
   51 Exp: Exp . ASSIGN Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . LT Exp
   55    | Exp . LE Exp
   56    | Exp . GT Exp
   57    | Exp . GE Exp
   58    | Exp . NE Exp
   59    | Exp . EQ Exp
   60    | Exp . PLUS Exp
   61    | Exp . MINUS Exp
   62    | Exp . MUL Exp
   63    | Exp . DIV Exp
   72    | Exp . LB Exp RB
   73    | Exp . LB Exp error
   74    | Exp . DOT ID

    ASSIGN  shift, and go to state 88
    OR      shift, and go to state 89
    AND     shift, and go to state 90
    LT      shift, and go to state 91
    LE      shift, and go to state 92
    GT      shift, and go to state 93
    GE      shift, and go to state 94
    NE      shift, and go to state 95
    EQ      shift, and go to state 96
    PLUS    shift, and go to state 97
    MINUS   shift, and go to state 98
    MUL     shift, and go to state 99
    DIV     shift, and go to state 100
    LB      shift, and go to state 101
    DOT     shift, and go to state 102

    $default  reduce using rule 50 (Dec)


State 73

   47 DecList: Dec COMMA DecList .

    $default  reduce using rule 47 (DecList)


State 74

   48 DecList: Dec DecList error .

    $default  reduce using rule 48 (DecList)


State 75

   24 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 24 (VarList)


State 76

   25 VarList: ParamDec VarList error .

    $default  reduce using rule 25 (VarList)


State 77

   37 Stmt: IF LP . Exp RP Stmt
   38     | IF LP . Exp RP Stmt ELSE Stmt
   41     | IF LP . Exp error Stmt

    INT    shift, and go to state 59
    ID     shift, and go to state 60
    FLOAT  shift, and go to state 61
    CHAR   shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65

    Exp  go to state 104


State 78

   39 Stmt: WHILE LP . Exp RP Stmt
   40     | WHILE LP . Exp error Stmt
